# SauceDemo_github_actions

api_tracing/: conftest.py
saucedemo/: .gitignore  conftest.py  pyproject.toml  pytest.ini
saucedemo/pages/cart_page/: cart_page.py  constants.py  locators.py
saucedemo/pages/checkout_overview_page/: checkout_overview_page.py  constants.py  locators.py
saucedemo/pages/checkout_page/: checkout_page.py  constants.py  locators.py
saucedemo/pages/finish_page/: constants.py  finish_page.py  locators.py
saucedemo/pages/inventory_page/: constants.py  inventory_page.py  locators.py
saucedemo/pages/login_page/: constants.py  locators.py  login_page.py
saucedemo/sauce_demo_tests/: locators.py
saucedemo/sauce_demo_tests/pages/: inventory_page.py  login_page.py
saucedemo/tests/: test_demo_workflow.py  test_login.py
saucedemo/tests/test_cart_page/elements/: test_cart_elements.py
saucedemo/tests/test_cart_page/workflows/: test_cart_workflow.py
saucedemo/tests/test_checkout/elements/: test_checkout_elements.py
saucedemo/tests/test_checkout/workflows/: test_checkout_workflow.py
saucedemo/tests/test_checkout_overview/elements/: test_checkout_overview_elements.py
saucedemo/tests/test_checkout_overview/workflows/: test_checkout_overview_workflow.py  test_checkout_overview_workflow.pyy
saucedemo/tests/test_finish/elements/: test_finish_elements.py
saucedemo/tests/test_finish/workflows/: test_finish_workflow.py
saucedemo/tests/test_inventory/elements/: test_inventory_elements.py
saucedemo/tests/test_inventory/workflows/: test_inventory_workflow.py
(+9 files in other folders)
