[project]
name = "saucedemo"
version = "0.1.0"
description = ""
authors = [
    {name = "Revathi Venkatachalam",email = "revathi.016@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "saucedemo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
